<resources>
    <string name="app_name">CinematicApp</string>
    <!--Log In Fragment-->
    <string name="logIn_title">Войти</string>
    <string name="logIn_info">Чтобы использовать весь функционал приложения необходимо авторизоваться</string>
    <string name="number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="havent_account">Ещё нет аккаунта?</string>
    <string name="registration">Регистрируйся!</string>
    <string name="validate_number_start">+7</string>
    <!--Forgot password-->
    <string name="title">Сброс пароля</string>
    <string name="info">Для сброса пароля необходимо ввести номер телефона, указанный при регистрации</string>
    <string name="semi_info">После проверки номера мы вышлем вам проверочный код</string>
    <string name="forgot_password_code_semi_info">Для восстановления пароля необходимо ввести проверочный код из SMS сообщения</string>
    <string name="forgot_password_new_pass_title">Новый пароль</string>
    <string name="forgot_password_new_pass_info">Укажите новый пароль, который вы хотите использовать при авторизации в приложении</string>
    <string name="send_code">Выслать код</string>
    <string name="forgot_password_pass_hit">Введите пароль</string>
    <string name="forgot_password_repeat_pass_hint">Повторите пароль</string>
    <string name="forgot_password_finish_add_new_pass">Пароль успешно изменён</string>
    <!-- Registration -->
    <string name="registration_title">Регистрация</string>
    <string name="registration_hint">Смс код</string>
    <string name="registration_restore_sms_code">Отправить ещё СМС (%d)</string>
    <string name="registration_button_text">Продолжить</string>
    <string name="registration_repeat_code">Выслать код повторно</string>
    <string name="registration_send_repeat_code">Код отправлен повторно</string>
    <string name="registration_info">Для продолжения регистрации необходимо указать номер телефона и подтвердить его</string>
    <string name="registration_semi_info">Данный номер будет использоваться вами в дальнейшем для входа в приложение</string>
    <string name="registration_code_title">Код подтверждения</string>
    <string name="registration_code_info">Для подтверждения номера необходимо ввести проверочный код из SMS сообщения</string>
    <!-- Registration Person -->
    <string name="registration_peron_name">Имя</string>
    <string name="registration_person_second_name">Фамилия</string>
    <string name="registration_person_pass">Пароль</string>
    <string name="registration_person_repeat_pass">Повторите пароль</string>
    <string name="registration_person_complete">Готово</string>
    <string name="registration_person_complete_toast">Регистрация прошла успешно</string>
    <string name="registration_person_info">Для завершения регистрации необходимо ввести персональные данные.</string>
    <string name="registration_person_semi_info">Пароль должен содержать заглавные и строчные буквы, а так же одну или несколько цифр.</string>
    <!-- Profile -->
    <string name="profile_information">Общая информация</string>
    <string name="profile_restore_pass">Сменить пароль</string>
    <string name="profile_notification">Уведомления</string>
    <string name="profile_report">Сообщить о проблеме</string>
    <string name="profile_donation">Поддержать разработчика</string>
    <string name="profile_logout">Выйти из аккаунта</string>
    <string name="profile_version">Версия приложения: 2.0.9</string>
    <string name="profile_add_new_name_success">Имя успешно обновлено</string>
    <string name="profile_user_info">Если вы хотите изменить данные профиля, то внесите их в полях ниже</string>
    <!-- Person info -->
    <string name="person_info">Если вы хотите изменить данные профиля, то внесите изменения в полях ниже</string>
    <string name="person_complete">Регистрация прошла успешно!</string>
    <!-- Errors -->
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_confirm_code_fail">Не верный код подтверждения</string>
    <string name="error_validate_number">Поле должно быть заполнено</string>
    <string name="error_verify">Вы исчерпали лимит запросов на сегодня</string>
    <string name="error_pass_coincidence">Пароли не совпадают</string>
    <string name="error_validate_size_number">Не верный формат номера</string>
    <string name="error_unknown_user_data">Номер телефона не зарегистрирован</string>
    <string name="error_unknown_user_pass">Не верный телефон или пароль</string>
    <string name="error_user_be_register">Номер телефона уже зарегистрирован</string>
    <string name="error_user_not_register">Номер телефона не зарегистрирован</string>
    <!-- Main RcView Adapter -->
    <string name="all">Все</string>
    <string name="shutter">Боевик</string>
    <string name="horror">Ужасы</string>
    <string name="detective">Детектив</string>
    <string name="thriller">Триллер</string>
    <string name="fantasy">Фэнтези</string>
    <string name="comedies">Комедия</string>
    <string name="journey">Приключения</string>
    <string name="dramas">Драма</string>
    <string name="fantastic">Фантастика</string>
    <string name="search">Поиск</string>
    <!--  Notifications -->
    <string name="notifications_title">Уведомления</string>
    <string name="notifications_update_app">Обновления приложения</string>
    <string name="subscription_renewal">Продление подписки</string>
    <string name="films_for_you">Подборки фильмов для вас</string>
    <string name="watch_later_notification">Запланированные просмотры</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Film info model -->
    <string name="director">Режиссёр</string>
    <string name="slogan">Слоган</string>
    <string name="budget">Бюджет</string>
    <!-- Filters -->
    <string name="filter_genres">Жанры</string>
    <string name="filter_raiting">Рейтинг</string>
    <string name="filter_years">Год</string>
    <string name="filter_country">Страна</string>
    <string name="filter_button">Кнопки</string>
    <!-- Full Filters -->
    <string name="filter_dram">Драма</string>
    <string name="filter_mel_dram">Мелодрама</string>
    <string name="filter_detective">Детектив</string>
    <string name="filter_criminal">Криминал</string>
    <string name="filter_rus">Русские!!!!</string>
    <string name="filter_thriller">Триллер</string>
    <string name="filter_foreign">Зарубежные!!!!!</string>
    <string name="filter_fantasy">Фэнтези</string>
    <string name="filter_comedy">Комедия</string>
    <string name="filter_medical">Медициеские!!!</string>
    <string name="filter_fighters">Боевик</string>
    <string name="filter_history">История</string>
    <string name="filter_adventure">Приключения</string>
    <string name="filter_horror">Ужасы</string>
    <string name="filter_fantastic">Фантастика</string>
    <string name="filter_army">Военный</string>

    <string name="filter_2023">2023</string>
    <string name="filter_2022">2022</string>
    <string name="filter_2021">2021</string>
    <string name="filter_2020">2020</string>
    <string name="filter_2019">2019</string>
    <string name="filter_2018">2018</string>
    <string name="filter_2017">2017</string>
    <string name="filter_2016">2016</string>
    <string name="filter_2010_2015">2010-2015</string>
    <string name="filter_2005_2010">2005-2010</string>
    <string name="filter_2000_2005">2000-2005</string>
    <string name="filter_1990_2000">1990-2000</string>
    <string name="filter_1980_1990">1980-1990</string>
    <string name="filter_1980">до 1980</string>

    <string name="filter_rating_9">Больше 9</string>
    <string name="filter_rating_8">Больше 8</string>
    <string name="filter_rating_7">Больше 7</string>
    <string name="filter_rating_6">Больше 6</string>
    <string name="filter_rating_5">Больше 5</string>

    <string name="filter_russia">Россия</string>
    <string name="filter_usa">США</string>
    <string name="filter_great_britain">Великобритания</string>
    <string name="filter_france">Франция</string>
    <string name="filter_ussr">СССР</string>
    <string name="filter_italy">Италия</string>
    <string name="filter_canada">Канада</string>
    <string name="filter_spain">Испания</string>
    <string name="filter_germany">Германия</string>
    <string name="filter_india">Индия</string>
    <string name="filter_denmark">Дания</string>
    <string name="filter_turkey">Турция</string>
    <string name="filter_south_korea">Южная Корея</string>
    <string name="filter_australia">Австралия</string>
    <string name="filter_sweden">Швеция</string>
    <string name="filter_china">Китай</string>
    <string name="filter_argentina">Аргентина</string>
    <string name="filter_norway">Норвегия</string>
    <string name="filter_belgium">Бельгия</string>
    <string name="filter_japan">Япония</string>
    <string name="filter_kazakhstan">Казахстан</string>
    <string name="filter_poland">Польша</string>
    <string name="filter_ireland">Ирландия</string>
    <string name="filter_colombia">Колумбия</string>
    <string name="filter_mexico">Мексика</string>
    <string name="filter_finland">Финляндия</string>
    <string name="filter_austria">Австрия</string>
    <string name="filter_belarus">Беларусь</string>
    <string name="filter_bulgaria">Болгария</string>
    <string name="filter_greece">Греция</string>

    <string name="empty_text">""</string>
    <string name="cant_add_to_lib">Фильм уже добавлен в избранное</string>
    <string name="cant_add_to_later">Фильм уже добавлен в Желаемое</string>
    <string name="emptyList">По выбранным фильтрам результатов не найдено</string>
    <string name="emptyListWatch">В этом разделе ещё нет фильмов</string>
    <string name="paging_error">"Проверьте интернет соединение"</string>
    <string name="email">"FoxTailEnte@gmail.com"</string>
    <string name="email_title">"Проблема в приложении"</string>
    <string name="email_text">"Добрый день! Я сталкнулся со следующей проблемой: "</string>
    <string name="email_error">"Приложения для отправки почты не найдено"</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>